--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     font-family: 'Work Sans', sans-serif;   
 }
+/*nav bar styles starts*/
 nav{
     background: #FFF;
 box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
@@ -54,6 +55,110 @@ background: rgba(11, 2, 35, 0.10);
     height: 18px;
    
 }
+/*navbar styles ends*/
+/*banner styles start*/
+.banner{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;  
+  gap: 1rem;
+  
+}
+.banner-content{
+ margin-left: 80px;
+}
+.banner-content .banner-title{
+margin-top: 80px;
+color: #0B0223;
+font-size: 48px;
+font-weight: 600;
+
+}
+.banner-content .banner-title-goat{
+ margin-top: -20px;   
+font-size: 95px;
+font-weight: 800;
+background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+.banner-content .banner-desc{
+    margin-top: -40px;
+}
+.banner-description1,.banner-description2,.banner-description3{
+color: #534C64;
+font-size: 20px;
+font-weight: 500;   
+}
+.banner-btn-pink{
+padding: 21px 40px;
+border-radius: 48px;
+background-color: #ff42a5;
+color: #FFF;
+font-size: 20px;
+font-weight: 600;
+border: 0;
+margin-top:40px;
+}
+.banner-btn-sky{
+padding: 21px 40px;
+border-radius: 48px;
+background: #4EC5F7;
+color: #FFF;
+border: 0;
+color: #FFF;
+font-size: 20px;
+font-weight: 600;
+margin-left: 10px;
+}
+.banner-img{
+    margin-right: 60px;
+}
+.banner-img img{
+    width: 520px;
+    height: 527px;   
+}
+
+/*banner styles ends*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -77,7 +182,22 @@ nav > ul{
     margin-right: 0;
     gap: 36px;
 }
+.banner{
+    flex-direction: column-reverse;
 }
+.banner-content{
+    margin-left: 0;
+   
+}
+.banner-img{
+    margin-right: 0;
+}
+.banner-img img{
+    width: 100%;
+}
+
+}
+
 
 @media screen and (min-width:576px) and (max-width:960px) {
     nav{
@@ -91,4 +211,17 @@ nav > ul{
         margin-right: 0;
         gap: 36px;
     }
+  .banner{
+    flex-direction: column-reverse;
+  }  
+  .banner-content{
+    margin-left: 0;
+  }
+  .banner-img{
+    margin-right: 0;
+  }
+  .banner-img img{
+    width: 100%;
+  }
+
 }
