updated banner section

--- a/style.css
+++ b/style.css
@@ -195,7 +195,10 @@ nav > ul{
 .banner-img img{
     width: 100%;
 }
-.banner-btn-sky{
+.banner-btn-pink{
+    margin-top: 0;
+  }
+  .banner-btn-sky{
     margin-left: 0;
 }
 }
@@ -224,6 +227,9 @@ nav > ul{
   }
   .banner-img img{
     width: 100%;
+  }
+  .banner-btn-pink{
+    margin-top: 0;
   }
   .banner-btn-sky{
     margin-left: 0;
