--- a/style.css
+++ b/style.css
@@ -58,66 +58,65 @@ background: rgba(11, 2, 35, 0.10);
 /*navbar styles ends*/
 /*banner styles start*/
 .banner{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;  
-  gap: 1rem;
-  
+    display: flex;
 }
-.banner-content{
- margin-left: 80px;
+.banner-svg{
+width:600px;
+height:500px;
 }
-.banner-content .banner-title{
-margin-top: 80px;
-color: #0B0223;
-font-size: 48px;
-font-weight: 600;
-
+.banner-all-content{
+    margin-top: -450px;
+    margin-left: 100px;
 }
-.banner-content .banner-title-goat{
- margin-top: -20px;   
-font-size: 95px;
+.banner-title{
+    color: #0B0223;
+    font-size: 48px;
+    font-weight: 600;  
+}
+.banner-title-goat{
+margin-top: -30px;
+font-size: 65px;
 font-weight: 800;
 background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+background-clip: text;
 -webkit-background-clip: text;
--webkit-text-fill-color: transparent;
+-webkit-text-fill-color: transparent;   
 }
-.banner-content .banner-desc{
-    margin-top: -40px;
-}
-.banner-description1,.banner-description2,.banner-description3{
-color: #534C64;
+.banner-desc{
+    margin-top: -20px;
+    color: #534C64;    
 font-size: 20px;
-font-weight: 500;   
+    font-weight: 500;
+
 }
-.banner-btn-pink{
-padding: 21px 40px;
-border-radius: 48px;
-background-color: #ff42a5;
-color: #FFF;
+.banner-pink-btn{
+    padding: 15px 40px;
+    border-radius: 48px;
+   background-color: #FF42A5;
+   color: #fff;
+   border: 0;
+   font-size: 20px;
+font-weight: 600;
+margin-top: 1rem;
+}
+.banner-sky-btn{
+    padding: 15px 40px;
+    border-radius: 48px;
+  background-color: #4ec5f7;  
+  color: #fff;
+  border: 0; 
 font-size: 20px;
 font-weight: 600;
-border: 0;
-margin-top:40px;
-}
-.banner-btn-sky{
-padding: 21px 40px;
-border-radius: 48px;
-background: #4EC5F7;
-color: #FFF;
-border: 0;
-color: #FFF;
-font-size: 20px;
-font-weight: 600;
-margin-left: 10px;
-}
-.banner-img{
-    margin-right: 60px;
+margin-left: 5px;
+margin-top:1rem;
 }
 .banner-img img{
-    width: 520px;
-    height: 527px;   
+    width: 400px;
+    height: 500px;
+    margin-left: 80px;
 }
+
+
 
 /*banner styles ends*/
 
@@ -185,20 +184,23 @@ nav > ul{
 .banner{
     flex-direction: column-reverse;
 }
-.banner-content{
-    margin-left: 0;
-   
+.banner-svg{
+    width: 100%;
 }
-.banner-img{
-    margin-right: 0;
+.banner-all-content{
+ width: 80%;
+  margin-top: -420px;
+  margin-left: 10px;
+}
+.banner-pink-btn{
+  padding: 10px 20px;  
+}
+.banner-sky-btn{
+    margin-left: 0;
+    padding: 10px 20px;
 }
 .banner-img img{
     width: 100%;
-}
-.banner-btn-pink{
-    margin-top: 0;
-  }
-  .banner-btn-sky{
     margin-left: 0;
 }
 }
@@ -219,19 +221,14 @@ nav > ul{
   .banner{
     flex-direction: column-reverse;
   }  
-  .banner-content{
-    margin-left: 0;
+  .banner-svg{
+    width: 100%;
   }
-  .banner-img{
-    margin-right: 0;
+  .banner-all-content{
+    width: 90%;
   }
   .banner-img img{
     width: 100%;
-  }
-  .banner-btn-pink{
-    margin-top: 0;
-  }
-  .banner-btn-sky{
     margin-left: 0;
-}
+  }
 }
