--- a/style.css
+++ b/style.css
@@ -115,11 +115,48 @@ margin-top:1rem;
     height: 500px;
     margin-left: 80px;
 }
-
-
-
 /*banner styles ends*/
-
+/*play instantly styles start*/
+.play{
+    margin-top: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.play-content{
+    margin-bottom: 160px;
+}
+.play-title{
+    color: #0B0223;
+    font-size: 32px;
+    font-weight: 700;
+}
+.pink-title{
+    font-size: 32px;
+    font-weight: 700;
+   color: #FF42A5;
+}
+.play-description{
+    color: #534C64;
+    font-size: 18px;
+    font-weight: 400;   
+}
+.play-images img{
+    width: 400px;
+height: 400px;
+flex-shrink: 0;
+border-radius: 8px;
+margin-left: 250px;
+}
+.cartoon-img img{
+    width: 200px;
+    height: 200px;
+    position: relative;
+    top: -180px;
+    right: 100px;
+    
+}
+/*play instantly styles ends*/
 
 
 
@@ -203,8 +240,23 @@ nav > ul{
     width: 100%;
     margin-left: 0;
 }
+.play{
+    flex-direction: column;
 }
-
+.play-content{
+ width: 80%;   
+}
+.play-images img{
+    width: 90%;
+    margin-left: 0;
+}
+.cartoon-img{
+        width: 200px;
+        height: 200px;
+        position: relative;
+       left: 70px;
+        
+}
 
 @media screen and (min-width:576px) and (max-width:960px) {
     nav{
@@ -231,4 +283,8 @@ nav > ul{
     width: 100%;
     margin-left: 0;
   }
+  .play{
+    flex-direction: column;
+  }
+}
 }
