--- a/style.css
+++ b/style.css
@@ -259,33 +259,40 @@ margin-top: 90px;
         
 }
 
+}
+
 @media screen and (min-width:576px) and (max-width:960px) {
-    nav{
-        flex-direction: column;
-    }
-    .logo{
-        margin-left: 0;
-    }
-    nav > ul{
-        flex-direction: column;
-        margin-right: 0;
-        gap: 36px;
-    }
-  .banner{
-    flex-direction: column-reverse;
+  nav{
+    flex-direction: column;
   }  
-  .banner-svg{
-    width: 100%;
-  }
-  .banner-all-content{
-    width: 90%;
-  }
-  .banner-img img{
-    width: 100%;
+  .logo{
     margin-left: 0;
   }
-  .play{
+  nav > ul{
     flex-direction: column;
+    margin-right: 0;
+    gap: 20px;
   }
-}
+  .banner{
+    flex-direction: column-reverse;
+  }
+ .banner-svg{
+    width: 100%;
+ }   
+ .banner-img img{
+    width: 100%;
+    margin-left: 0;
+ }
+ .play{
+    flex-direction: column;
+ }
+ .play-content{
+    width: 100%;
+   margin-top: 20px;
+   margin-bottom: 70px;
+   text-align: center;
+ }
+ .play-images{
+   margin-right: 220px;
+ }
 }
