--- a/style.css
+++ b/style.css
@@ -196,6 +196,29 @@ margin-left: 250px;
     
 }
 /*play instantly styles ends*/
+/*games genre styles starts*/
+.genre-first-row{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    gap: 1rem;
+}
+.genre-name-img{
+    display: flex;
+    gap: 0.8rem;
+    width: 215px;
+height: 50px;
+border-radius: 50px;
+background: #FFF;
+ transition: 0.1s ease-out;
+}
+.genre-name-img:hover{
+border: 2px solid #FF42A5;
+color: #FF42A5;
+
+}
+
+
+/*games genre styles ends*/
 
 
 
@@ -303,8 +326,22 @@ margin-top: 90px;
 .online-games-main-title, .funny{
     font-size: 30px;
 }
+.genre-first-row{
+    grid-template-columns: repeat(3,3fr);
 }
-
+.genre-name-img{
+   width: 100%;
+   gap: 0;
+}
+.genre-name-img img{
+    width: 50px;
+    height: 50px;
+}
+.genre-name{
+    font-size: 0.8rem;
+    font-weight: 600;
+}
+}
 @media screen and (min-width:576px) and (max-width:960px) {
   nav{
     flex-direction: column;
@@ -341,5 +378,13 @@ margin-top: 90px;
  }
  .online-games-container{
     flex-direction: column;
+ }
+ .genre-first-row{
+    grid-template-columns: repeat(3,3fr);
+
+ }
+ .genre-name-img{
+    width: 100%;
+    gap: 0;
  }
 }
